Fix home page, fix text overflow, add community and product page

--- a/src/components/css/homemenswear.css
+++ b/src/components/css/homemenswear.css
@@ -1,28 +1,43 @@
 .scrollable-row {
-    display: flex;
-    overflow-x: auto;
-    white-space: nowrap; 
-  }
-  
-  .scrollable-row::-webkit-scrollbar {
-    display: none;
-  }
+  display: flex;
+  overflow-x: auto;
+  white-space: nowrap;
+}
 
-  .image-icon {
-    width: 250px;
-    height: 250px;
-    padding: 0px;
-    cursor: pointer;
-    display: inline-block; 
-    margin-right: 25px; 
-    object-fit: cover;
-  }
+.scrollable-row::-webkit-scrollbar {
+  display: none;
+}
 
-  .image-container {
-    text-align: left; 
-    padding: 0px;
-  }
-  
-  .item-text {
-      max-width: 250px;
-  }
+.image-icon {
+  width: 250px;
+  height: 250px;
+  padding: 0px;
+  cursor: pointer;
+  display: block; 
+  object-fit: cover;
+}
+
+.image-container {
+  text-align: left;
+  padding: 5px;
+  display: inline-block; 
+}
+
+.item-text {
+  max-width: 250px;
+  white-space: normal; 
+  overflow: hidden; 
+  text-overflow: ellipsis; 
+  display: block; 
+}
+
+.image-container a,
+.image-container a:visited {
+  color: black;
+  text-decoration: none;
+}
+
+.image-container a:hover,
+.image-container a:active {
+  text-decoration: none; 
+}
