Set up backend connection for product details page and popular users

--- a/src/components/css/designericons.css
+++ b/src/components/css/designericons.css
@@ -1,8 +1,9 @@
 .scrollable-row {
-    overflow-x: auto;
-    white-space: nowrap; 
-  }
-  
+  display: flex;        
+  flex-wrap: nowrap;    
+  overflow-x: auto;      
+  -webkit-overflow-scrolling: touch;
+}
   .scrollable-row::-webkit-scrollbar {
     display: none;
   }
