--- a/src/components/css/productdetails.css
+++ b/src/components/css/productdetails.css
@@ -1,7 +1,8 @@
 .mainImage {
-    width: 100%;
-    height: auto;
+    width: 600px;
+    height: 625px;
     margin-bottom: 20px; 
+    object-fit: cover;
 }
 
 .thumbnails {
